Work from the last class on main content

--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
             </nav>
 
             <article class="right-side">
-                right side content
+                <img src="files/women_w_pottery.jpg" alt="Women Pottery"/>
+                <h2>News &amp; Announcements</h2>
+
+                <p>
+                    <span>The History of Women &amp; Gender in Mexico:</span> Met wismodo
+
+                    <a href="#">Announcements &amp More</a>
+                </p>
             </article>
         </div>
 
