--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </section>
 
     <section class="content">
-
         <div class="nav top-nav">
             <a href="#">Campus directory</a><span></span>
             <a href="#">Department calendar</a><span></span>
@@ -44,11 +43,30 @@
                 <h2>News &amp; Announcements</h2>
 
                 <p>
-                    <span>The History of Women &amp; Gender in Mexico:</span> Met wismodo
+                    <span>The History of Women &amp; Gender in Mexico:</span> Met wismodo lestrud mod ent lum dit nim
+                    iure erostis nos nulpute ming ea conse molore dipis nullutem numsam velis nisi blaor sequis nulputem
+                    quat ilit wismolortis ad dunt lutat eliquisl utat vulla conulla facum vel inibh erci tie conulla
+                    feummod dolor
+                </p>
 
-                    <a href="#">Announcements &amp More</a>
+                <p class="learn-more">
+                    <a href="#">
+                        >>More News &amp; Announcements
+                    </a>
                 </p>
             </article>
+
+            <nav class="login">
+                <a href="#">
+                    <img src="files/login-humis.gif" alt="Login humis">
+                </a>
+                <a href="#">
+                    <img src="files/login-cis.gif" alt="Login cis">
+                </a>
+
+            </nav>
+
+            <div class="clear-float"></div>
         </div>
 
         <div class="nav bottom-nav">
