Cleaned up some last details and finished my README

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <a href="#">Department calendar</a><span></span>
             <a href="#">Contact us</a>
             <a href="#">
-                <img src="files/u_small.gif" alt="University of Utah"/></a>
+                <img src="files/u_small.gif" align="absmiddle" alt="University of Utah"/>
+            </a>
 
         </div>
 
@@ -46,7 +47,8 @@
                     <span>The History of Women &amp; Gender in Mexico:</span> Met wismodo lestrud mod ent lum dit nim
                     iure erostis nos nulpute ming ea conse molore dipis nullutem numsam velis nisi blaor sequis nulputem
                     quat ilit wismolortis ad dunt lutat eliquisl utat vulla conulla facum vel inibh erci tie conulla
-                    feummod dolor
+                    feummod dolor ut accumsan vel esequisi bla adio odolorting erosto cor iriustie commod minciliquate
+                    tatum vero odipit, vulla feuisis molore tat, sim dit alis
                 </p>
 
                 <p class="learn-more">
